fix spacing and text layout bug on login notification

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1124,8 +1124,6 @@ div.faq_inner_wrapper:last-child {
     color: #AC0909;
     text-decoration: none;
     font-weight: 800;
-    float: left;
-    margin-right: 4px;
   }
   a:hover {
     color: #D14545;
